  Class definition of graphMCP has changed and is no
  longer a subclass of graphNEL. The function
  gMCP:::updateGraphToNewClassDefinition(object)
  is provided to update old serialized (saved) objects.
  The GUI will use this function on its own if necessary.

- Also not longer a dependency: gtools, xtable, MCPAN

- New dependency: lattice graphics for power simulations

- Power simulation code from our third author
  Bjoern Bornkamp.

- New example graphs:

  - general and simple Successive Graphs
  - fixedSequence
  - Fallback Procedure
  - Truncated Holm (special case)
  - BauerEtAl2001
  - HuqueAloshEtBhore2011
  - BretzEtAl2009a/b/c

- Renaming of older example graphs to simpler names.

- CI dialog is modal.

- LaTeX-Code can be shown in Dialog and does not have 
  to be saved in a file.

- PValues can be attached to graphMCP objects as an 
  attribute "pvalues".
  
- Function graphGUI has a new parameter:
  experimentalFeatures=FALSE
  Set this to TRUE for experimental features like the following: 

- Power analysis in GUI.

- Code for adaptive procedures (marked as experimental).
  
    
Version 0.6-6 (04-Jul-2011, Rev. 860)
=====================================

- Fixed a bug in the GUI that deleted often p-values.

- Adjusted p-values are calculated also in the parametric case.

- Graphs without epsilon edges can be processed by a
  much faster procedure written in C.
  
- matrix2graph & graph2matrix deal better with variable edges.

- Hopefully setDividerLocation works now always correct, i.e. 
  the graph panel will always use 2/3 of the screen.
  
- Fractions like (1-a)/(1+b) are now shown with the 
  correct layout in the GUI.

- Speed up due to reduced Java/R communication.
  (More results are now cached in a Hashtable.)
  
 48 files changed, 559 insertions(+), 279 deletions(-)
  

Version 0.6-5 (26-May-2011, Rev. 825)
=====================================

- New dependency: CommonJavaJars
  This package contains now all the third party libraries.
