@@ -40,7 +40,7 @@ public class NetList extends JPanel implements MouseMotionListener, MouseListene
 	protected Vector<Edge> edges = new Vector<Edge>();
 	protected Vector<Node> nodes = new Vector<Node>();
 	
-	public Vector<Node> getNodes() {
+	public Vector<Node> getgetNodes() {
 		return nodes;
 	}
 
